test-framework/sudo-compliance-tests/src/snapshots/sudoers/cmnd/command_specified_not_by_absolute_path_is_rejected.snap
---
source: sudo-compliance-tests/src/sudoers/cmnd.rs
expression: output.stderr()
---
/etc/sudoers:1:19: syntax error
ALL ALL=(ALL:ALL) true
                  ^~~~
root is not in the sudoers file.  This incident will be reported.
